Clarify equipment section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <h2 id="me-haluamme-sinut">Me haluamme sinut!</h2>
         <p>Karhukaisia tarvitaan taas. Ensimmäisestä tehtävästä selvinneet hahmot saavat paluumatkan palkkansa $4000 sovitusti. Lisäksi sotilaat Beam, Farud ja Grosso saavat yhden Advancementin (CRB sivu 54) verran täydennyskoulutusta, kyberneettisiä parannuksia ja/tai geenihoitoja. Liittouma lunastaa käytettyjä tavaroita puoleen hintaan, sotavarusteiden myynti ulkopuolisille on laitonta (mutta toki mahdollista).</p>
         <p>Kaikki saavat myös tehdä uuden hahmon halutessaan, ja osan onkin pakko näin tehdä. Tässä noudatetaan samoja sääntöjä kuin aiemminkin, ja tässäkin tapauksessa käytettävissä on $4000 budjetti plus hahmon omat säästöt, tyypillisesti $500. Myös uudet hahmot pääsevät nauttimaan samoista koulutus- ja parantelumahdollisuuksista kuin veteraanikarhukaiset, eli saavat yhden Advancementin.</p>
-        <p>Liittouma on Orvalin tehtävän aikana parantanut hankintaorganisaatiotaan ja pystyy nyt tarjoamaan konsulteilleen uudempaa aseteknologiaa sopivasti subventoituun hintaan.</p>
+        <p>Liittouma on Orvalin tehtävän aikana parantanut hankintaorganisaatiotaan ja pystyy nyt tarjoamaan konsulteilleen uudempaa aseteknologiaa sopivasti subventoituun hintaan. <a href="https://pullinen.github.io/valomuurin-tuolla-puolen/">Edellisen tehtävänannon</a> tavarat ovat luonnollisesti myös hankittavissa.</p>
         <table>
         <caption>Käämiaseet ampuvat pienikaliiperisia 2mm EC -luoteja, jotka kiihdytetään äärimmäiseen nopeuteen magneettikentän avulla. Käämiaseet ovat erittäin tehokkaita panssarointia vastaan.</caption>
         <thead>
